namespace GoonzuGame.GUI {
    public class CharacterWindow : UIWindow {
        public void ShowCharacter() {}
    }
}