namespace GoonzuGame.GUI {
    public class CraftingWindow : UIWindow {
        public void ShowCrafting() {}
    }
}