namespace GoonzuGame.GUI {
    public class MarketWindow : UIWindow {
        public void ShowMarket() {}
    }
}