namespace GoonzuGame.GUI {
    public class OptionsWindow : UIWindow {
        public void ShowOptions() {}
    }
}