namespace GoonzuGame.GUI {
    public class PartyWindow : UIWindow {
        public void ShowParty() {}
    }
}