namespace GoonzuGame.GUI {
    public class QuestsWindow : UIWindow {
        public void ShowQuests() {}
    }
}