namespace GoonzuGame.GUI {
    public class SkillsWindow : UIWindow {
        public void ShowSkills() {}
    }
}