namespace GoonzuUI.Data
{
    [System.Serializable]
    public struct PlayerStats
    {
        public string Name;
        public int HP;
        public int MaxHP;
        public int MP;
        public int MaxMP;
        public int EXP;
        public int MaxEXP;
        // Add more stats as needed (Strength, Agility, etc.)
    }
}
