namespace GoonzuGame.GUI
{
    public class InventoryWindow : UIWindow
    {
        public override void Show()
        {
            base.Show();
            System.Console.WriteLine("Inventory window shown.");
        }
    }
}
